Refresh token method added.
